--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,9 @@ header {
     grid-template-columns: 1fr;
     grid-template-rows: 0.3fr 2fr 1fr;
     padding-right: 20px;
-    padding-left: 5px;
-
+    padding-left: 10px;
+    
+    
 }
 
 .main {
@@ -60,4 +61,28 @@ header {
 
 .logoName {
     font-size: 25px;
+    font-weight: 800;
+}
+
+.menu {
+    display: grid;
+    
+}
+
+
+.upperMenu {
+    width: 30px;
+}
+
+.lowerMenu {
+    width: 30px;
+    
+}
+
+.icon-name {
+    display: flex;
+    gap: 10px;
+    padding-top: 20px;
+    justify-content: ccenter;
+    align-items: center;
 }
