--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+/* white color for sidebar icons*/
+:root {
+    --main-filter: invert(96%) sepia(100%) saturate(12%) hue-rotate(237deg) brightness(103%) contrast(103%); 
+}
+
 .container {
     display: grid;
     height: 100vh;
@@ -23,13 +28,13 @@ header {
 
 .sidebar {
     grid-area: sidebar;
-    background-color: rgb(100, 202, 168);
+    background-color: rgba(25,146,212,255);
 
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 0.3fr 2fr 1fr;
     padding-right: 20px;
-    padding-left: 10px;
+    padding-left: 13px;
     
     
 }
@@ -62,6 +67,7 @@ header {
 .logoName {
     font-size: 25px;
     font-weight: 800;
+    color: white;
 }
 
 .menu {
@@ -72,17 +78,27 @@ header {
 
 .upperMenu {
     width: 30px;
+
 }
 
 .lowerMenu {
     width: 30px;
-    
+
 }
 
 .icon-name {
     display: flex;
     gap: 10px;
     padding-top: 20px;
-    justify-content: ccenter;
     align-items: center;
+}
+
+.sidebarText {
+    color: white;
+    font-weight: 800;
+}
+
+/* sidebar icons color white */
+#privacy, #support, #settings, #communities, #tasks, #history, #messages, #profile, #home, .logo {
+    filter: var(--main-filter);
 }
