--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,36 @@
 
 header {
     grid-area: header;
-    background-color: aqua;
+    background-color: #fefffe;
+}
+
+#searchIcon {
+    width: 20px;
+}
+
+#bellIcon {
+    width: 20px;
+}
+
+.upperHeaderWrapper {
+    display: flex;
+    justify-content:space-between;
+}
+
+.test {
+    padding-top: 20px;
+    padding-left: 30px;
+    display: flex;
+    gap: 5px;
+}
+
+.input {
+    width: 30rem;
 }
 
 .sidebar {
     grid-area: sidebar;
-    background-color: rgba(25,146,212,255);
+    background-color: #1892d5;
 
     display: grid;
     grid-template-columns: 1fr;
