--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,8 @@ body {
 header {
     grid-area: header;
     background-color: #fefffe;
+    padding-bottom: 10px;
+    padding-top: 5px;
 }
 
 .upperHeaderPart {
@@ -73,6 +75,8 @@ header {
 .lowerHeaderPart {
     display: flex;
     justify-content: space-between;
+    margin-top: 10px;
+    align-items: center;
 }
 
 .pic_greeting_name {
@@ -100,15 +104,18 @@ header {
     display: flex;
     gap: 40px;
     height: 40px;
+    align-items: center;
 }
 
 .buttons > button {
     width: 100px;
-    border-radius: 14px;
+    border-radius: 20px;
     border: none;
     background-color: #1992d4;
     color: white;
     font-weight: bolder;
+    padding: 12px;
+    
 
 
 }
