--- a/styles.css
+++ b/styles.css
@@ -139,13 +139,16 @@ header {
     grid-template-rows: 0.3fr 2fr 1fr;
     padding-right: 20px;
     padding-left: 13px;
-    
-    
 }
 
 .main {
     grid-area: main;
     background-color: bisque;
+}
+
+.main_grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 }
 
 .anouncements {
