Need to remake main

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     "sidebar main main main"
     "sidebar main main main";
 }
-
+/* Header part */
 header {
     grid-area: header;
     background-color: #fefffe;
@@ -129,6 +129,7 @@ header {
     display: flex;
 }
 
+/* Sidebar part */
 
 .sidebar {
     grid-area: sidebar;
@@ -141,37 +142,10 @@ header {
     padding-left: 13px;
 }
 
-.main {
-    grid-area: main;
-    background-color: #e3e9f0;
-    padding: 20px;
-    padding-top: 30px;
-}
-
-.main_grid {
-    display: grid;
-    grid-template-columns: 2fr 2fr 1.5fr;
-    grid-template-rows: 3fr 3fr 3fr;
-    gap: 30px;
-    height: 100%;
-    padding: 20px;
-    
-
-}
-
-.inside_content {
-    background-color: #ffffff;
-    border-radius: 10px;
-}
-
-
-
-
 .sidebar-flex {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    
 }
 
 .logo {
@@ -218,17 +192,40 @@ header {
     filter: var(--main-filter);
 }
 
-.right-side {
+/* Main part */
+
+.main {
+    grid-area: main;
+    background-color: #e3e9f0;
+    padding: 20px;
+    padding-top: 30px;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+/* .main_grid {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 3fr 3fr 3fr;
+    gap: 30px;
+    height: 100%;
+    padding: 20px;
+    
+
+} */
+
+.inside_content {
     background-color: #ffffff;
     border-radius: 10px;
 }
 
-.anouncements {
-    grid-row: 1 / 3;
-    grid-column: 3 / 4;
-    background-color: #ffffff;
-}
 
-.main_title {
-    padding-left: 20px;
-}
+
+
+
+
+
+
+
