--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,8 @@ header {
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
+
+    box-shadow: 0px 1px 6px 0px gray;
 }
 
 .project-display {
@@ -222,22 +224,32 @@ header {
 .project {
     width: 48%;
     min-width: 265px;
-    border: 1px solid red;
     height: 180px;
     border-radius: 10px;
+    background-color: #fefeff;
+    box-shadow: 1px 1px 1px 1px #DCDCDC;
+    background-image: -webkit-linear-gradient(left, #f1b428, #f1b428 1.5%, transparent 1%, transparent 100%);
     
 }
 
 .anouncement_trending_content {
-    border: 1px solid green;
+    background-color: #fefeff;
     height: 350px;
     min-width: 200px;
     border-radius: 10px;
+    box-shadow: 1px 1px 1px 1px #DCDCDC;
 }
 
 .right_side_titles {
     padding-bottom: 10px;
 }
 
+.inside_content {
+    padding: 10px;
+    padding-top: 30px;
+    padding-left: 30px;
+}
 
-
+.project_text {
+    font-size: 15px;
+}
